Fix design feature carrousel and collapse dropdown

--- a/edercorentin_11_23052022/src/components/DropdownInfo/dropdown_info.css
+++ b/edercorentin_11_23052022/src/components/DropdownInfo/dropdown_info.css
@@ -5,7 +5,6 @@
   width: 100%;
 }
 .dropdown_background {
-  background-color: rgb(231, 221, 221);
   border-radius: 5px;
   width: 100%;
   margin-bottom: 20px;
@@ -32,12 +31,15 @@
   font-size: 18px;
 }
 
-.dropdown_button {
+.dropdown_button_isNotActive {
   cursor: pointer;
-  -ms-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
+  transition-duration: 0.5s;
+}
+
+.dropdown_button_isActive {
+  cursor: pointer;
   transform: rotate(180deg);
+  transition-duration: 0.5s;
 }
 
 .dropdown_item_icon {
@@ -47,19 +49,27 @@
 
 .dropdown_info_isNotActive {
   color: #fe6666;
-  padding: 10px;
   flex-wrap: wrap;
-  display: none;
+  list-style: inside;
+  height: 0;
+  overflow: hidden;
+  background-color: transparent;
+  margin-top: 0;
+  transform: translateY(0);
+  transition-duration: 0.5s;
 }
 
 .dropdown_info_isActive {
+  margin-top: 0;
   color: #fe6666;
-  padding-top: 30px;;
-  padding-bottom: 50px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 30px;
   flex-wrap: wrap;
-  display: block;
+  list-style: inside;
+  transform: translateY(0);
+  transition-duration: 0.5s;
+  overflow: hidden;
+  background-color: rgb(231, 221, 221);
+  border-radius: 00px 0px 10px 10px;
 }
 
 @media screen and (max-width: 700px) {
